--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -351,8 +351,8 @@ button {
       img {
         width: 100%;
         height: 100%;
-        transform: rotate(90deg);
-        -webkit-transform: rotate(90deg);
+        // transform: rotate(90deg);
+        // -webkit-transform: rotate(90deg);
       }
     }
     .icon {
@@ -504,8 +504,8 @@ button {
     img {
       width: 100%;
       height: 100%;
-      transform: rotate(90deg);
-      -webkit-transform: rotate(90deg);
+      // transform: rotate(90deg);
+      // -webkit-transform: rotate(90deg);
     }
   }
   .join-btn {
